--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
 <section>
     <h2>Get in Touch</h2>
-    <a href="kavya007ayvak@gmail.com">Mail Me</a>
+    <a href=" mailto:kavya007ayvak@gmail.com">Mail Me</a>
 </section>
 
 </body>
