--- a/Achievements.html
+++ b/Achievements.html
@@ -20,6 +20,7 @@
     </nav>
 </header>
 <section>
+    <h2>Achievements</h2>
     <ul>
         <li>Secured 1st place in Art and Rangoli competition during Pongal celebrations.</li>
         <li>Won 3rd place in Republic Day Essay competition.</li>
