--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <section class="hero">
     <img width="180px"src="profile.jpeg">
-    <h2 style="color: red; font-weight:bold;">Hello, I'm Kavya B</h2>
+    <h2 style="color: rgb(255, 238, 0); font-weight:bold;">Hello, I'm Kavya B</h2>
     <p style="color: white;">Engineering Student | Developer | Designer</p>
 </section>
 
