--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <h1>Welcome To My Portfolio</h1>
+    <h1 class="fade-in">Welcome To My Portfolio</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -21,8 +21,8 @@
 </header>
 
 <section class="hero">
-    <img width="180px"src="profile.jpeg">
-    <h2 style="color: rgb(255, 238, 0); font-weight:bold;">Hello, I'm Kavya B</h2>
+    <img width="180px"src="profile.jpeg" class="profile">
+    <h2 style="color: rgb(255, 238, 0); font-weight:bold;" class="typing">Hello, I'm Kavya B</h2>
     <p style="color: rgb(165, 163, 25); font-weight: bold;">Engineering Student | Developer | Designer</p>
 </section>
 
