--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <section class="hero">
     <img width="180px"src="profile.jpeg" class="profile">
-    <h2 style="color: rgb(255, 238, 0); font-weight:bold;" class="typing">Hello, I'm Kavya B</h2>
+    <h2 class="typing">Hello, I'm Kavya B</h2>
     <p style="color: rgb(165, 163, 25); font-weight: bold;">Engineering Student | Developer | Designer</p>
 </section>
 
