--- a/Achievements.html
+++ b/Achievements.html
@@ -21,7 +21,7 @@
 </header>
 <section>
     <h2>Achievements</h2>
-    <ul>
+    <ul class="card">
         <li>Secured 1st place in Art and Rangoli competition during Pongal celebrations.</li>
         <li>Won 3rd place in Republic Day Essay competition.</li>
         <li>Won 3rd place in Independence Day Essay competition.</li>
