--- a/Achievements.html
+++ b/Achievements.html
@@ -21,14 +21,14 @@
 </header>
 <section>
     <h2>Achievements</h2>
-    <ul class="card">
-        <li>Secured 1st place in Art and Rangoli competition during Pongal celebrations.</li>
-        <li>Won 3rd place in Republic Day Essay competition.</li>
-        <li>Won 3rd place in Independence Day Essay competition.</li>
-        <li>Successfully organized a free medical camp in collaboration with Vellaloor Government Hospital,Victory Hospital Madurai,and Dr.Anilkumar Eye Hospital.</li>
-        <li>Completed community awareness surveys on Tuberculosis,Dengue, and Leprosy for 100+ households in Kidaripatti village.</li>
-        <li>Planted and maintained 175 trees across college campus and nearby villages as part of an environmental initiative.</li>
-        <li>Selected and participated in the National Integration Camp in Assam representing NSS and my Institution.</li>
+    <ul>
+        <li class="card">Secured 1st place in Art and Rangoli competition during Pongal celebrations.</li>
+        <li class="card">Won 3rd place in Republic Day Essay competition.</li>
+        <li class="card">Won 3rd place in Independence Day Essay competition.</li>
+        <li class="card">Successfully organized a free medical camp in collaboration with Vellaloor Government Hospital,Victory Hospital Madurai,and Dr.Anilkumar Eye Hospital.</li>
+        <li class="card">Completed community awareness surveys on Tuberculosis,Dengue, and Leprosy for 100+ households in Kidaripatti village.</li>
+        <li class="card">Planted and maintained 175 trees across college campus and nearby villages as part of an environmental initiative.</li>
+        <li class="card">Selected and participated in the National Integration Camp in Assam representing NSS and my Institution.</li>
         
 
     </ul>
