--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 <section>
     <h2>About</h2>
-    <p>
+    <p class="card">
         Hello! I'm Kavya B — an enthusiastic engineering student passionate about technology, creativity, and community development.  
 
 I am currently pursuing my Bachelor of Engineering at SACS MAVMM Engineering College with a CGPA of 8.5. Along with academics, I actively participate in technical learning, volunteering activities, and leadership programs.
@@ -36,7 +36,7 @@ My interests include Web Development, UI/UX Design, Social Impact Projects, Writ
     </p></section>
     <section>
     <h2>Career Objective</h2>
-    <p>
+    <p class="card">
         To contribute my best as an individual,collaborate effectively as a team player, and
 thrive in an organization that offers ample opportunities to enhance my knowledge,skills, and abilities.
     </p>
