--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <section class="hero">
     <img width="180px"src="profile.jpeg" class="profile"><br>
-    <h2 style="color: green;font-weight: bolder;">Hello, I'm Kavya B</h2>
-    <p style="color:green; font-weight: bold;">Engineering Student | Developer | Designer</p>
+    <h2 style="color: yellow;font-weight: bolder;">Hello, I'm Kavya B</h2>
+    <p style="color:yellow; font-weight: bold;">Engineering Student | Developer | Designer</p>
 </section>
 
 </body>
