--- a/projects.html
+++ b/projects.html
@@ -23,9 +23,9 @@
 <section>
     <h2>Projets</h2>
     <ul>
-        <li>Parent and Community Engagement in Education using Design Thinking</li>
-        <li>Create a web page for User Registration With Validation</li>
-        <li>People Management dashboard in Power BI</li>
+        <li class="card">Parent and Community Engagement in Education using Design Thinking</li>
+        <li class="card">Create a web page for User Registration With Validation</li>
+        <li class="card">People Management dashboard in Power BI</li>
         
     </ul>
 </section>
