--- a/skills.html
+++ b/skills.html
@@ -22,7 +22,7 @@
 
 <section>
     <h2>Hard Skills</h2>
-    <ul>
+    <ul class="card">
         <li>Data analyst</li>
         <li>Web development</li>
         <li>Oracle</li>
@@ -30,7 +30,7 @@
     </ul>
 </section>
 <section>
-    <h2>Soft Skills</h2>
+    <h2 class="card">Soft Skills</h2>
     <ul>
         <li>Team Coordination</li>
         <li>Leadership</li>
@@ -45,13 +45,13 @@
     <h2>Education</h2>
     <h3>2021-2023</h3>
     <h4>GOVT GIRLS HR SEC SCHOOL</h4>
-    <ul>
+    <ul class="card">
         <li>6th to 12th</li>
         <li>Score:90%</li>
     </ul>
     <h3>2023-2027</h3>
     <h4>SACS MAVMM ENGINEERING COLLEGE</h4>
-    <ul>
+    <ul class="card">
         <li>Department of CSE</li>
         <li>Upto 4th semester CGPA:8.28 </li>
     </ul>
