--- a/skills.html
+++ b/skills.html
@@ -30,8 +30,8 @@
     </ul>
 </section>
 <section>
-    <h2 class="card">Soft Skills</h2>
-    <ul>
+    <h2>Soft Skills</h2>
+    <ul class="card">
         <li>Team Coordination</li>
         <li>Leadership</li>
         <li>Problem solving</li>
@@ -43,12 +43,15 @@
 
 <section>
     <h2>Education</h2>
+    <section class="card">
     <h3>2021-2023</h3>
     <h4>GOVT GIRLS HR SEC SCHOOL</h4>
-    <ul class="card">
+    <ul>
         <li>6th to 12th</li>
         <li>Score:90%</li>
     </ul>
+    </section>
+    <section class="card">
     <h3>2023-2027</h3>
     <h4>SACS MAVMM ENGINEERING COLLEGE</h4>
     <ul class="card">
