--- a/skills.html
+++ b/skills.html
@@ -46,7 +46,7 @@
     <section class="card">
     <h3>2021-2023</h3>
     <h4>GOVT GIRLS HR SEC SCHOOL</h4>
-    <ul>
+    <ul class="card">
         <li>6th to 12th</li>
         <li>Score:90%</li>
     </ul>
