--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 </header>
 
 <section>
-    <h2>About</h2>
+    <h2 class="card1">About</h2>
     <p class="card">
         Hello! I'm Kavya B — an enthusiastic engineering student passionate about technology, creativity, and community development.  
 
@@ -35,7 +35,7 @@ My interests include Web Development, UI/UX Design, Social Impact Projects, Writ
 
     </p></section>
     <section>
-    <h2>Career Objective</h2>
+    <h2 class="card1">Career Objective</h2>
     <p class="card">
         To contribute my best as an individual,collaborate effectively as a team player, and
 thrive in an organization that offers ample opportunities to enhance my knowledge,skills, and abilities.
