--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 </header>
 
 <section>
-    <h2>Projets</h2>
+    <h2 class="card1">Projets</h2>
     <ul>
         <li class="card">Parent and Community Engagement in Education using Design Thinking</li>
         <li class="card">Create a web page for User Registration With Validation</li>
