--- a/Achievements.html
+++ b/Achievements.html
@@ -20,7 +20,7 @@
     </nav>
 </header>
 <section>
-    <h2>Achievements</h2>
+    <h2 class="card1">Achievements</h2>
     <ul>
         <li class="card">Secured 1st place in Art and Rangoli competition during Pongal celebrations.</li>
         <li class="card">Won 3rd place in Republic Day Essay competition.</li>
