--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
 
 <section>
-    <h2>Get in Touch</h2>
+    <h2 class="card1">Get in Touch</h2>
     <a href=" mailto:kavya007ayvak@gmail.com">Mail Me</a>
 </section>
 
