--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,7 @@
 </header>
 
 <section>
-    <h2>Hard Skills</h2>
+    <h2 class="card1">Hard Skills</h2>
     <ul class="card">
         <li>Data analyst</li>
         <li>Web development</li>
@@ -30,7 +30,7 @@
     </ul>
 </section>
 <section>
-    <h2>Soft Skills</h2>
+    <h2 class="card1">Soft Skills</h2>
     <ul class="card">
         <li>Team Coordination</li>
         <li>Leadership</li>
@@ -42,7 +42,7 @@
 </section>
 
 <section>
-    <h2>Education</h2>
+    <h2 class="card1">Education</h2>
     <section class="card">
     <h3>2021-2023</h3>
     <h4>GOVT GIRLS HR SEC SCHOOL</h4>
