--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,7 @@
 </header>
 
 <section>
-    <h2 style="border:5px solid black;padding:20px;">Hard Skills</h2>
+    <h2 >Hard Skills</h2>
     <ul class="card">
         <li>Data analyst</li>
         <li>Web development</li>
@@ -30,7 +30,7 @@
     </ul>
 </section>
 <section>
-    <h2 style="border:5px solid black;padding:20px;">Soft Skills</h2>
+    <h2 >Soft Skills</h2>
     <ul class="card">
         <li>Team Coordination</li>
         <li>Leadership</li>
@@ -42,7 +42,7 @@
 </section>
 
 <section>
-    <h2 style="border:5px solid black;padding:20px;">Education</h2>
+    <h2 >Education</h2>
     <section class="card">
     <h3>2021-2023</h3>
     <h4>GOVT GIRLS HR SEC SCHOOL</h4>
