--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </header>
 
 <section class="hero">
-    <img width="180px"src="profile.jpeg" class="profile"><br>
+    <img width="180px"src="profile.jpeg" class="profile" style="border:3px solid green;border-radius:10px;"><br>
     <h2 style="color: yellow;font-weight: bolder;">Hello, I'm Kavya B</h2>
     <p style="color:yellow; font-weight: bold;">Engineering Student | Developer | Designer</p>
 </section>
