--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<header>
+<header class="container">
     <h1 class="fade-in">Welcome To My Portfolio</h1>
     <nav>
         <a href="index.html">Home</a>
