--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<header>
+<header class="container">
     <h1>Skills & Education</h1>
     <nav>
         <a href="index.html">Home</a>
